--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"home": "https://riveromj.github.io/PageReact",
+	"home": "https://riveromj.github.io/ExamplePageReact",
 	"name": "react-hello",
 	"version": "1.0.1",
 	"engines": {
